# renderstudiosharp

./: CMakeLists.txt
src/: CMakeLists.txt
src/swig/: CMakeLists.txt  Kit.i
